# swarm-rescue

./: .gitignore  README.md  docker-compose.yml  setup.sh
carrier/: package.xml  setup.py
docs/: code_review.md  operation_manual.md  upgrade_plan.md
ground_station/: package.xml  setup.py
ground_station/ground_station/: ground_station_node.py  task_coordinator.py  web_dashboard.py
ground_station/ground_station/templates/: dashboard.html
rl_training/: disaster_env.py  eval_scout.py  requirements.txt  train_scout.py  verify_onnx.py
scout/: package.xml  setup.py
scout/ros2_pkg/: package.xml  setup.py
scout/ros2_pkg/scout/config/: nav2_params.yaml
scout/ros2_pkg/scout/nodes/: life_map_node.py  rl_nav_node.py  serial_bridge.py
scout/scout/config/: nav2_params.yaml
scout/scout/launch/: scout.launch.py
scout/scout/nodes/: disaster_recovery.py  lidar_proc.py  life_map_node.py  nav2_goal_bridge.py  radar_processor.py  rl_nav_node.py  serial_bridge.py  terrain_analysis.py
scout/stm32_fw/: Makefile
scout/stm32_fw/Algorithm/: kinematics.c  pid.c
scout/stm32_fw/BSP/: bsp_can.c  bsp_can.h  bsp_uart.c
scout/stm32_fw/Core/Inc/: swarm_protocol.h
scout/stm32_fw/Driver/: imu_bmi088.c  motor_m3508.c  motor_m3508.h
scout/stm32_fw/Module/: chassis.h  comm.c  comm.h
shared/: qos_profiles.py  robot_state.py
specialist/: package.xml  setup.py
specialist/ros2_pkg/specialist/config/: nav2_params.yaml
specialist/ros2_pkg/specialist/launch/: specialist.launch.py
specialist/ros2_pkg/specialist/nodes/: serial_bridge.py  thermal_node.py
specialist/specialist/config/: nav2_params.yaml
specialist/specialist/nodes/: arm_planner.py  serial_bridge.py  thermal_node.py
specialist/stm32_fw/: Makefile
specialist/stm32_fw/Core/Src/: main.c
specialist/stm32_fw/Module/: arm.c  arm.h  comm.c  led.h  spec_ctrl.h
swarm_bringup/: package.xml  setup.py
swarm_bringup/config/: cyclonedds.xml  map_merge.yaml  slam_toolbox_localization.yaml  slam_toolbox_scout.yaml  swarm.rviz  uwb_anchor.yaml
swarm_bringup/launch/: demo_human_follow.launch.py  sim.launch.py  swarm.launch.py
swarm_bringup/swarm_bringup/: lifecycle_manager.py  sim_swarm_node.py
swarm_bringup/swarm_bringup/shared/: __init__.py  robot_state.py  swarm_protocol.py
swarm_bringup/urdf/: rescue_robot.urdf.xacro
swarm_bringup/urdf/carrier/: carrier.urdf.xacro
swarm_bringup/urdf/common/: chassis.xacro  common_properties.xacro  gazebo_plugins.xacro  mecanum_wheel.xacro  sensors.xacro
swarm_bringup/urdf/scout/: scout.urdf.xacro
swarm_bringup/urdf/specialist/: specialist.urdf.xacro
swarm_bringup/worlds/: disaster_rubble.world  disaster_zone.world
swarm_msgs/: CMakeLists.txt  package.xml
test/: ros_test_stubs.py  test_chassis_kinematics.py  test_disaster_env.py  test_protocol.py  test_robot_roles.py  (+3 more)
(+43 files in other folders)
