<?xml version="1.0"?>
<package format="3">
  <name>scout</name>
  <version>1.0.0</version>
  <description>Scout robot ROS 2 package for lidar processing, radar life detection, SLAM, and navigation.</description>
  <maintainer email="dev@robot.com">dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <depend>swarm_bringup</depend>
</package>
