<?xml version="1.0"?>
<package format="3">
  <name>specialist</name>
  <version>1.0.0</version>
  <description>Specialist robot ROS 2 package for arm planning, thermal processing, LED control, and serial bridging.</description>
  <maintainer email="dev@robot.com">dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>

  <exec_depend>rplidar_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <depend>swarm_bringup</depend>
</package>
