<?xml version="1.0"?>
<package format="3">
  <name>swarm_bringup</name>
  <version>1.0.0</version>
  <description>Launch, simulation, configuration, world, and robot description assets for the rescue swarm.</description>
  <maintainer email="dev@robot.com">dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>scout</depend>
  <depend>carrier</depend>
  <depend>specialist</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>multirobot_map_merge</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
